Actualizar styles.css

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
 }
 
 header {
-  background-color: #808080; /* Gris */
+  background-color: #808080;
   color: white;
   text-align: center;
   padding: 15px;
