Actualizar styles.css

--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ a:hover {
 }
 
 footer {
-  background-color: #8B4513; /* Marrón cálido */
+  background-color: #808080; /* Marrón cálido */
   color: white;
   text-align: center;
   padding: 10px;
