--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* Reset básico */
 * {
     margin: 0;
     padding: 0;
@@ -13,7 +12,7 @@ body {
 
 /* Header */
 header {
-    background-color: #8B0000;
+    background-color: #3dc0ec;
     padding: 10px 20px;
     display: flex;
     justify-content: space-between;
@@ -103,7 +102,7 @@ header {
 }
 
 .hero h1 {
-    color: #8B0000;
+    color: #3dc0ec;
     margin: 20px 0;
     font-size: 36px;
 }
@@ -114,8 +113,8 @@ header {
 }
 
 .btn {
-    background-color: #8B0000;
-    color: white;
+    background-color: #3dc0ec;
+    color: rgb(0, 0, 0);
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
@@ -123,7 +122,7 @@ header {
 }
 
 .btn:hover {
-    background-color: #A52A2A;
+    background-color: #3dc0ec;
 }
 
 /* Contacto */
@@ -148,7 +147,7 @@ header {
 }
 
 .formulario h2, .info-contacto h2 {
-    color: #8B0000;
+    color: #3dc0ec;
     margin-bottom: 20px;
 }
 
@@ -176,7 +175,7 @@ header {
 }
 
 .formulario button {
-    background-color: #8B0000;
+    background-color: #ab8f04;
     color: white;
     padding: 10px;
     border: none;
@@ -186,7 +185,8 @@ header {
 }
 
 .formulario button:hover {
-    background-color: #A52A2A;
+    background-color: #ab8f04;
+
 }
 
 .info-contacto p {
