--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ header {
 
 /* Footer */
 footer {
-    background-color: #8B0000;
+    background-color: #898787;
     color: white;
     padding: 20px;
     text-align: center;
@@ -341,7 +341,7 @@ footer {
         top: 70px;
         left: 0;
         width: 100%;
-        background-color: #8B0000;
+        background-color: #898787;
         padding: 20px;
     }
 
