--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ header {
 
 /* Footer */
 footer {
-    background-color: #898787;
+    background-color: #3dc0ec;
     color: white;
     padding: 20px;
     text-align: center;
