--- a/style.css
+++ b/style.css
@@ -341,7 +341,7 @@ footer {
         top: 70px;
         left: 0;
         width: 100%;
-        background-color: #898787;
+        background-color: #3de0ec;
         padding: 20px;
     }
 
