--- a/style.css
+++ b/style.css
@@ -72,8 +72,8 @@ header {
 
 .carrusel {
     max-width: 800px;
-    margin: 0 auto;
-    position: fixed;
+    margin: 50px auto;
+    position: relative;
     overflow: hidden;
 }
 
