--- a/style.css
+++ b/style.css
@@ -82,7 +82,10 @@ header {
 
 .carrusel-imagenes img {
     width: 100%;
+    max-width: 300px;
     display: none;
+    border-radius: 10px;
+    transition: opacity 0.5s ease-in-out;
 }
 
 .carrusel-imagenes img.active {
@@ -220,6 +223,12 @@ header {
 }
 
 .menu-contenedor {
+    margin: 0 auto;
+    max-width: 1200px;
+    padding: 20px;
+}
+
+{
     display: flex;
     flex-wrap: wrap;
     gap: 20px;
@@ -270,7 +279,7 @@ header {
 .sobre-nosotros {
     padding: 50px 20px;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 5 auto;
     text-align: center;
 }
 
