--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ header {
     flex: 1;
     min-width: 250px;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: #027ed6;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -352,7 +352,7 @@ footer {
 }
 
 /* Media Queries */
-@media (max-width: 768px) {
+@media (max-width: 150px) {
     .nav-menu {
         display: none;
         position: absolute;
@@ -400,4 +400,28 @@ footer {
         align-items: center;
         text-align: center;
     }
+}
+.btn-whatsapp {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 60px;
+    height: 60px;
+    background-color: #25D366;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    transition: transform 0.3s ease;
+}
+
+.btn-whatsapp img {
+    width: 35px;
+    height: 35px;
+}
+
+.btn-whatsapp:hover {
+    transform: scale(1.1);
 }
