--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 1rem;
-    position: fixed;
+    position: relative;
     top: 0;
     width: 100%;
     z-index: 1000;
@@ -39,7 +39,7 @@ header {
 }
 
 .nav-menu ul li a {
-    color: #027ed6;
+    color: #f8e23d;
     text-decoration: none;
     font-size: 18px;
     transition: color 0.3s;
