--- a/style.css
+++ b/style.css
@@ -241,7 +241,7 @@ header {
     flex: 1;
     min-width: 250px;
     padding: 20px;
-    background-color: #027ed6;
+    background-color: #c9ccce;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
@@ -313,8 +313,8 @@ header {
 
 /* Footer */
 footer {
-    background-color: #027ed6;
-    color: white;
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
     padding: 20px;
     text-align: center;
 }
