--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 /* Header */
 header {
-    background-color: #ffffff;
+    background-color: #03dc03e;
     display: flex;
     justify-content: space-between;
     align-items: center;
