Actualizar style.css

--- a/style.css
+++ b/style.css
@@ -313,7 +313,7 @@ header {
 
 /* Footer */
 footer {
-    background-color: #ffffff;
+    background-color: #03dc03e;
     color: rgb(0, 0, 0);
     padding: 20px;
     text-align: center;
