--- a/style.css
+++ b/style.css
@@ -17,11 +17,11 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem;
-    position: relative;
+    padding: 10px 20px;
+    position: sticky;
     top: 0;
     width: 100%;
-    z-index: 1000;
+    z-index: 100;
     
 }
 
@@ -223,6 +223,16 @@ header {
     max-width: 1200px;
     margin: 0 auto;
     text-align: center;
+}
+
+.nav-menu.active {
+display: block;
+}
+
+.nav-menu ul {
+list-style: none;
+display: flex;
+gap: 1rem;
 }
 
 .menu-contenedor {
