--- a/style.css
+++ b/style.css
@@ -18,15 +18,12 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    position: sticky;
+    position: absolut;
     top: 0;
     width: 100%;
     z-index: 1000;
-    
-}
-
-.logo img {
-    height: 60px;
+.logo img 
+   height: 60px;
 }
 
 .nav-menu ul {
