--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header {
     position: absolut;
     top: 0;
     width: 100%;
-    z-index: 1000;
+    z-index: 100%;
 .logo img 
 height: 60px;
 }
