--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ height: 60px;
     margin-bottom: 50px;
 }
 .carrusel {
-    max-width: 800px;
+    max-width: 800px 726px;
     margin: 50px auto;
     position: relative;
     overflow: hidden;
